# fruity_game_engine

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  TODO_INSTANCE.md  watch-app.sh  watch-libs.sh  workspace.code-workspace
fruity_core/: Cargo.toml
fruity_core/fruity_any/: Cargo.toml
fruity_core/fruity_any/fruity_any_derive/: Cargo.toml
fruity_core/fruity_any/src/: lib.rs
fruity_core/fruity_core_derive/src/: lib.rs
fruity_core/fruity_ecs/: Cargo.toml
fruity_core/fruity_ecs/src/: extension_component_service.rs  lib.rs
fruity_core/fruity_graphic/: Cargo.toml
fruity_core/fruity_graphic/src/: graphic_manager.rs  graphic_service.rs  lib.rs
fruity_core/fruity_graphic_2d/: Cargo.toml
fruity_core/fruity_graphic_2d/src/: graphic_2d_manager.rs  graphic_2d_service.rs  lib.rs
fruity_core/fruity_hierarchy/: Cargo.toml
fruity_core/fruity_hierarchy/src/: lib.rs
fruity_core/fruity_hierarchy_2d/: Cargo.toml
fruity_core/fruity_hierarchy_2d/src/: lib.rs
fruity_core/fruity_input/: Cargo.toml
fruity_core/fruity_input/src/: drag_service.rs  input_manager.rs  input_service.rs  lib.rs
fruity_core/fruity_introspect/: Cargo.toml
fruity_core/fruity_introspect/src/: lib.rs  utils.rs
fruity_core/fruity_javascript/: Cargo.toml
fruity_core/fruity_javascript/src/: exception.rs  javascript_engine.rs  javascript_service.rs  lib.rs  module_map.rs  runtime.rs
fruity_core/fruity_javascript_watcher/: Cargo.toml
fruity_core/fruity_javascript_watcher/src/: javascript_watcher_service.rs  lib.rs
fruity_core/fruity_physic_2d/: Cargo.toml
fruity_core/fruity_physic_2d/src/: lib.rs
fruity_core/fruity_windows/: Cargo.toml
fruity_core/fruity_windows/src/: frame_manager.rs  frame_service.rs  lib.rs  window_service.rs  windows_manager.rs
fruity_core/src/: convert.rs  inject.rs  lib.rs  object_factory.rs  object_factory_service.rs  platform.rs  service_guard.rs  service_manager.rs  service_rwlock.rs  settings.rs  signal.rs  utils.rs  world.rs
fruity_core/src/component/: component.rs  component_guard.rs  component_list_guard.rs  component_list_rwlock.rs  component_rwlock.rs  components_factory.rs  mod.rs  serialized_component.rs
fruity_core/src/entity/: archetype.rs  entity.rs  entity_guard.rs  entity_manager.rs  entity_rwlock.rs  entity_service.rs  mod.rs
fruity_core/src/introspect/: mod.rs
fruity_core/src/module/: inner_module_manager.rs  mod.rs  module_manager.rs
fruity_core/src/resource/: error.rs  inner_resource_container.rs  inner_resource_manager.rs  load_resources.rs  mod.rs  resource.rs  resource_container.rs  resource_manager.rs  resource_reference.rs  resources_loader.rs  resources_manager.rs  serialized_resource.rs
fruity_core/src/serialize/: primitive.rs  serialized.rs
fruity_core/src/service/: mod.rs  serialized_service.rs  service.rs  service_rwlock.rs  single_thread_service.rs  utils.rs
fruity_core/src/system/: system_manager.rs  system_service.rs
fruity_core/src/utils/: collection.rs  introspect.rs  math.rs  mod.rs  single_thread_wrapper.rs  string.rs
fruity_ecs/: Cargo.toml
fruity_ecs/fruity_ecs_derive/: Cargo.toml
fruity_ecs/src/: lib.rs  settings.rs  world.rs
fruity_ecs/src/component/: component.rs  component_list_guard.rs  component_list_rwlock.rs  component_rwlock.rs  components_factory.rs  mod.rs  serialized_component.rs
fruity_ecs/src/entity/: archetype.rs  component_rwlock.rs  entity.rs  entity_guard.rs  entity_manager.rs  entity_rwlock.rs  entity_vec.rs  mod.rs
fruity_ecs/src/resource/: error.rs  mod.rs  resource.rs  resources_loader.rs  resources_manager.rs
fruity_ecs/src/serialize/: serialized.rs
fruity_ecs/src/service/: mod.rs  serialized_service.rs  service.rs  service_guard.rs  service_manager.rs  service_rwlock.rs  utils.rs
fruity_ecs/src/settings/: mod.rs  resources_loader.rs
fruity_ecs/src/system/: mod.rs  system_manager.rs
fruity_ecs/src/world/: mod.rs  world.rs
fruity_editor/: Cargo.toml
fruity_editor/fruity_editor_graphic/: Cargo.toml
fruity_editor/fruity_editor_graphic/src/: lib.rs
fruity_editor/fruity_editor_graphic_2d/: Cargo.toml
fruity_editor/fruity_editor_graphic_2d/src/: gizmos_service.rs  lib.rs
fruity_editor/fruity_editor_hierarchy/: Cargo.toml
fruity_editor/fruity_editor_hierarchy/src/: lib.rs
fruity_editor/fruity_editor_javascript/: Cargo.toml
fruity_editor/fruity_editor_javascript/src/: lib.rs
fruity_editor/fruity_editor_physic_2d/: Cargo.toml
fruity_editor/fruity_editor_physic_2d/src/: lib.rs
fruity_editor/src/: component_editor_manager.rs  component_editor_service.rs  component_inspector_service.rs  dialog_service.rs  editor_component_service.rs  editor_manager.rs  editor_menu_service.rs  editor_panels_service.rs  file_explorer_manager.rs  file_explorer_service.rs  gizmos_service.rs  inspector_service.rs  introspect_editor_service.rs  lib.rs  main.rs  menu.rs  style.rs
fruity_editor/src/components/: controls.rs  mod.rs  panes.rs  root.rs  scene.rs
fruity_editor/src/fields/: resource_reference.rs
fruity_editor/src/hooks/: mod.rs
fruity_editor/src/inspect/: inspect_entity.rs
fruity_editor/src/mutations/: mutation.rs  mutation_service.rs  set_field_mutation.rs  tuple_mutation.rs
fruity_editor/src/resources/: default_resources.rs
fruity_editor/src/state/: entity.rs  file_explorer.rs  inspector.rs  mod.rs  scene.rs  select_entity.rs  theme.rs  world.rs
fruity_editor/src/systems/: draw_gizmos_2d.rs  pause_at_startup.rs
fruity_editor/src/ui/: context.rs
fruity_graphic/: Cargo.toml
fruity_graphic/src/: graphics_manager.rs  image_loader.rs  image_resource.rs  lib.rs  texture_resource.rs  windows_manager.rs
fruity_graphic_2d/: Cargo.toml
fruity_graphic_2d/src/: graphics_2d_manager.rs  lib.rs
fruity_javascript_scripting/: Cargo.toml
fruity_javascript_scripting/src/: bindings.rs  error.rs  exception.rs  javascript_engine.rs  lib.rs  lib_denno.rs  module_map.rs  module_specifier.rs  modules.rs  normalize_path.rs  ops.rs  runtime.rs  service1.rs  thread_scope_stack.rs  value.rs
fruity_plugins/fruity_physic_2d_rapier/: Cargo.toml
(+452 files in other folders)
