[package]
name = "fruity_core"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4.14"
rayon = "1.5"
itertools = "0.10.1"
yaml-rust = "0.4"
fruity_any = { path = "../fruity_any" }
fruity_collections = { path = "../fruity_collections" }
fruity_core_derive = { path = "fruity_core_derive" }
fruity_introspect = { path = "../fruity_introspect" }
fruity_observer = { path = "../fruity_observer" }
