[package]
name = "fruity_core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
puffin = "0.12.1"
rayon = "1.5"
yaml-rust = "0.4"
lazy_static = "1.4"
libloading = "0.7.1"
topological-sort = "0.1.0"
linked-hash-map = "0.5.3"
hot_reload_lib = { path = "../deps/hot_reload_lib" }
fruity_any = { path = "fruity_any" }
