[package]
name = "fruity_ecs"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4.14"
rayon = "1.5"
itertools = "0.10.1"
fruity_any = { path = "../fruity_any" }
fruity_any_derive = { path = "../fruity_any_derive" }
fruity_collections = { path = "../fruity_collections" }
fruity_collections_derive = { path = "../fruity_collections_derive" }
fruity_ecs_derive = { path = "../fruity_ecs_derive" }
fruity_introspect = { path = "../fruity_introspect" }
