[package]
name = "fruity_editor"
version = "0.1.0"
edition = "2018"
resolver = "2"

# [lib]
# crate-type = ["dylib"]

[dependencies]
winit = "0.25.0"
rayon = "1.5"
lazy_static = "1.4"
egui_wgpu_backend = "0.14"
egui = "0.15"
epi = "0.15"
egui_winit_platform = "0.11"
wgpu = "0.11.0"
comp_state = { path = "../deps/comp_state" }
fruity_any = { path = "../fruity_any" }
fruity_core = { path = "../fruity_core" }
fruity_input = { path = "../fruity_input" }
fruity_introspect = { path = "../fruity_introspect" }
fruity_graphic = { path = "../fruity_graphic" }
fruity_graphic_2d = { path = "../fruity_graphic_2d" }
fruity_javascript_scripting = { path = "../fruity_javascript_scripting" }
fruity_windows = { path = "../fruity_windows" }
pretty_env_logger = "0.4.0"
log = "0.4.14"