[package]
name = "fruity_graphic"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
winit = "0.25.0"
wgpu = "0.11.0"
image = "0.23.14"
tokio = "1.12.0"
log = "0.4.14"
yaml-rust = "0.4"
fruity_any = { path = "../fruity_any" }
fruity_ecs = { path = "../fruity_ecs" }
fruity_introspect = { path = "../fruity_introspect" }
fruity_observer = { path = "../fruity_observer" }
fruity_windows = { path = "../fruity_windows" }