[package]
name = "fruity_graphic"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["dylib"]

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
tokio = { version = "1.12", features = ["rt", "rt-multi-thread", "time"] }
winit = "0.25.0"
wgpu = "0.11.0"
image = "0.23.14"
log = "0.4.14"
yaml-rust = "0.4"
cgmath = "0.18"
fruity_any = { path = "../fruity_any" }
fruity_core = { path = "../fruity_core" }
fruity_introspect = { path = "../fruity_introspect" }
fruity_windows = { path = "../fruity_windows" }