[package]
name = "fruity_javascript_scripting"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
rusty_v8 = "0.30.0"
url = "2.2.2"
lazy_static = "1.4.0"
# serde = { path = "./deps/serde" }
# serde_v8 = { path = "./deps/serde_v8" }
# serde = "1.0.130"
# serde_v8 = "0.13.0"
# deno_core = "0.101.0"
# Boa = "0.13.0"
fruity_ecs = { path = "../fruity_ecs" }