[package]
name = "fruity_javascript_scripting"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4.14"
rusty_v8 = "0.32.0"
url = "2.2.2"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
convert_case = "0.1.0"
fruity_any = { path = "../fruity_any" }
fruity_core = { path = "../fruity_core" }
fruity_introspect = { path = "../fruity_introspect" }