[package]
name = "fruity_ecs"
version = "0.1.0"
edition = "2018"
resolver = "2"

# [lib]
# crate-type = ["dylib"]

[dependencies]
log = "0.4.14"
rayon = "1.5"
itertools = "0.10.1"
maplit = "1.0.2"
fruity_ecs_derive = { path = "fruity_ecs_derive" }
fruity_any = { path = "../fruity_any" }
fruity_core = { path = ".." }