[package]
name = "fruity_graphic_2d"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
adjacent-pair-iterator = "1.0.0"
log = "0.4.14"
puffin = "0.12.1"
rayon = "1.5"
cgmath = "0.18"
maplit = "1.0.2"
fruity_any = { path = "../fruity_any" }
fruity_core = { path = ".." }
fruity_ecs = { path = "../fruity_ecs" }
fruity_graphic = { path = "../fruity_graphic" }
fruity_windows = { path = "../fruity_windows" }
