[package]
name = "fruity_hierarchy_2d"
version = "0.1.0"
edition = "2018"
resolver = "2"

# [lib]
# crate-type = ["dylib"]

[dependencies]
log = "0.4.14"
fruity_any = { path = "../fruity_any" }
fruity_core = { path = ".." }
fruity_ecs = { path = "../fruity_ecs" }
fruity_graphic_2d = { path = "../fruity_graphic_2d" }
fruity_hierarchy = { path = "../fruity_hierarchy" }
