[package]
name = "fruity_editor_graphic_2d"
version = "0.1.0"
edition = "2018"
resolver = "2"

# [lib]
# crate-type = ["dylib"]

[dependencies]
rayon = "1.5"
fruity_any = { path = "../../fruity_core/fruity_any" }
fruity_core = { path = "../../fruity_core" }
fruity_ecs = { path = "../../fruity_core/fruity_ecs" }
fruity_editor = { path = "../" }
fruity_input = { path = "../../fruity_core/fruity_input" }
fruity_introspect = { path = "../../fruity_core/fruity_introspect" }
fruity_graphic = { path = "../../fruity_core/fruity_graphic" }
fruity_graphic_2d = { path = "../../fruity_core/fruity_graphic_2d" }
log = "0.4.14"