[package]
name = "fruity_editor_hierarchy"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]

[dependencies]
rayon = "1.5"
fruity_any = { path = "../../fruity_core/fruity_any" }
fruity_core = { path = "../../fruity_core" }
fruity_ecs = { path = "../../fruity_core/fruity_ecs" }
fruity_hierarchy = { path = "../../fruity_core/fruity_hierarchy" }
fruity_editor = { path = "../" }
log = "0.4.14"