[package]
name = "fruity_editor_javascript"
version = "0.1.0"
edition = "2018"
resolver = "2"

# [lib]
# crate-type = ["dylib"]

[dependencies]
rayon = "1.5"
maplit = "1.0.2"
edit = "0.1.3"
fruity_any = { path = "../../fruity_engine/fruity_any" }
fruity_core = { path = "../../fruity_engine/fruity_core" }
fruity_editor = { path = "../" }
fruity_introspect = { path = "../../fruity_engine/fruity_introspect" }
fruity_graphic = { path = "../../fruity_engine/fruity_graphic" }
log = "0.4.14"