[package]
name = "fruity_editor_javascript"
version = "0.1.0"
edition = "2018"
resolver = "2"

# [lib]
# crate-type = ["dylib"]

[dependencies]
rayon = "1.5"
maplit = "1.0.2"
edit = "0.1.3"
fruity_any = { path = "../../fruity_core/fruity_any" }
fruity_core = { path = "../../fruity_core" }
fruity_ecs = { path = "../../fruity_core/fruity_ecs" }
fruity_editor = { path = "../" }
fruity_graphic = { path = "../../fruity_core/fruity_graphic" }
log = "0.4.14"