[package]
name = "fruity_wgpu_graphic_2d"
version = "0.1.0"
edition = "2018"
resolver = "2"

# [lib]
# crate-type = ["dylib"]

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
winit = "0.25.0"
wgpu = "0.11.0"
image = "0.23.14"
log = "0.4.14"
rayon = "1.5"
cgmath = "0.18"
maplit = "1.0.2"
fruity_any = { path = "../../../fruity_core/fruity_any" }
fruity_core = { path = "../../../fruity_core" }
fruity_ecs = { path = "../../../fruity_core/fruity_ecs" }
fruity_introspect = { path = "../../../fruity_core/fruity_introspect" }
fruity_graphic_2d = { path = "../../../fruity_core/fruity_graphic_2d" }
fruity_graphic = { path = "../../../fruity_core/fruity_graphic" }
fruity_windows = { path = "../../../fruity_core/fruity_windows" }
fruity_wgpu_graphic = { path = "../fruity_wgpu_graphic" }
