[package]
name = "fruity_editor_physic_2d_rapier"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["dylib"]

[dependencies]
log = "0.4.14"
rapier2d = { version = "0.9.2", features = [ "simd-stable" ] }
fruity_physic_2d_rapier = { path = "../" }
fruity_any = { path = "../../../fruity_core/fruity_any" }
fruity_core = { path = "../../../fruity_core" }
fruity_ecs = { path = "../../../fruity_core/fruity_ecs" }
fruity_graphic = { path = "../../../fruity_core/fruity_graphic" }
fruity_graphic_2d = { path = "../../../fruity_core/fruity_graphic_2d" }
fruity_editor = { path = "../../../fruity_editor" }